# VPN

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
openspec/: config.yaml
openspec/changes/Phase-3-cloud-providers/: archive-pr1.md  archive-pr2.md  design.md  proposal.md  spec.md  tasks.md
openspec/changes/archive/2026-07-09-Phase-4-server-provisioning/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-09-Phase-4-server-provisioning/specs/server-provisioning/: spec.md
openspec/changes/wireguard-vpn-client/: tasks.md
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cloud/: do.rs  hz.rs  mod.rs  oci.rs  retry.rs
src-tauri/src/config/: mod.rs  secrets.rs
src-tauri/src/i18n/: en.json  es.json  mod.rs
src-tauri/src/provision/: error.rs  manager.rs  mod.rs  scripts.rs  ssh.rs  tofu.rs
src-tauri/src/provision/scripts/: configure-dns.sh  configure-firewall.sh  configure-sysctl.sh  configure-wireguard.sh  install-wireguard.sh
src-tauri/src/tunnel/: mod.rs
src-tauri/src/vpn/: mod.rs
src/lib/: ConnectButton.svelte  ProgressIndicator.svelte  ProviderForm.svelte  ServerList.svelte  StatusBar.svelte
