[package]
name = "wireguard-vpn-client"
version = "0.1.0"
description = "A desktop WireGuard VPN client with cloud auto-provisioning"
authors = ["you"]
edition = "2021"

[lib]
name = "wireguard_vpn_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
ssh2 = "0.9"
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
keyring = "3"
thiserror = "2"
log = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
# Required for Secret Service keyring on Linux
# dbus-secret-service may be needed depending on keyring backend

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
